--- a/src/apps_common/gallery/static/gallery/admin/css/gallery.css
+++ b/src/apps_common/gallery/static/gallery/admin/css/gallery.css
@@ -118,6 +118,7 @@
     box-sizing: border-box;
     padding: 6px 0 6px 8px;
     z-index: 20;
+    border-radius: 4px;
     background: rgba(255, 255, 255, 0.7);
 }
 .gallery-item:hover .item-controls {
