--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -25,11 +25,13 @@
 </script>
 
 {% block gallery %}
-  <div class="gallery gallery-standart" id="gallery-{{ name }}">
+  <div class="gallery gallery-standart" id="gallery-{{ name }}"
+      data-applabel="{{ app_label }}"
+      data-modelname="{{ model_name }}">
+
     {% block content %}
-      <input type="hidden" class="app_label" value="{{ app_label }}"/>
-      <input type="hidden" class="model_name" value="{{ model_name }}"/>
-      <input type="hidden" class="gallery_id" name="{{ name }}" id="id_{{ name }}" value="{{ gallery.pk|default:"" }}"/>
+      <input type="hidden" class="gallery_id" {{ attrs }} name="{{ name }}"
+             value="{{ gallery.pk|default:"" }}"/>
 
       {% if gallery.IMAGE_MODEL %}
         <input type="hidden" class="aspects" value="{{ image_aspects }}">
@@ -47,51 +49,53 @@
         {% endif %}
       </div>
 
-      {% block templates %}
-        <script id="{{ name }}_image_template" type="text/template">
-          <div class="gallery-item gallery-item-image"
-               style="width:{{ admin_item_size.0 }}px; height:{{ admin_item_size.1 }}px;">
-            <input type="hidden" class="item-id" value=""/>
-            <a target="_blank" class="item-show" style="display:none;">
-              <img/>
-            </a>
+      <!-- templates -->
+      <script type="text/template" class="image-template">
+        <div class="gallery-item gallery-item-image"
+             style="width:{{ admin_item_size.0 }}px; height:{{ admin_item_size.1 }}px;">
 
-            <div class="item-preloader">
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                     aria-valuemax="100"></div>
-              </div>
+          <a target="_blank" class="item-preview" style="display:none;">
+            <img/>
+          </a>
+
+          <div class="item-preloader">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                   aria-valuemax="100"></div>
             </div>
-
-            <span class="item-controls">
-                <input type="checkbox" name="gallery-item" class="check-box" value="">
-                <a class="icon-edit item-crop" title="{% trans 'Crop image' %}"></a>
-                <a class="icon-repeat item-rotate-left"
-                   title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
-                <a class="icon-repeat item-rotate-right"
-                   title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
-                <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
-                <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
-            </span>
           </div>
-        </script>
 
-        <script id="{{ name }}_video_link_template" type="text/template">
-          <div class="gallery-item gallery-item-video-link">
-            <input type="hidden" class="item-id" value=""/>
-            <a target="_blank" class="item-show">
-              <span class="inner">
-                  <img/>
-              </span>
-            </a>
+          <span class="item-controls">
+            <input type="checkbox" name="gallery-item" class="check-box" value="">
+            <a class="icon-edit item-crop" title="{% trans 'Crop image' %}"></a>
+            <a class="icon-repeat item-rotate-left"
+               title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
+            <a class="icon-repeat item-rotate-right"
+               title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
+            <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
+            <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
+          </span>
+        </div>
+      </script>
 
-            <span class="item-controls">
-                <input type="checkbox" class="check-box" value="">
-                <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
+      <script type="text/template" class="videolink-template">
+        <div class="gallery-item gallery-item-video-link">
+
+          <a target="_blank" class="item-preview" style="display:none;">
+            <span class="inner">
+              <img/>
             </span>
-          </div>
-        </script>
-      {% endblock templates %}
+          </a>
+
+          <div class="item-preloader"></div>
+
+          <span class="item-controls">
+            <input type="checkbox" class="check-box" value="">
+            <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
+          </span>
+        </div>
+      </script>
     {% endblock content %}
+
   </div>
 {% endblock gallery %}
