--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -43,6 +43,7 @@
 
         <span class="item-controls">
           <input type="checkbox" class="check-box" value="{{ item.id }}">
+          <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
           <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
         </span>
       </div>
