--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -33,7 +33,7 @@
       <input type="hidden" class="gallery_id" {{ attrs }} name="{{ name }}"
              value="{{ gallery.pk|default:"" }}"/>
 
-      {% if gallery.IMAGE_MODEL %}
+      {% if gallery_model.IMAGE_MODEL %}
         <input type="hidden" class="aspects" value="{{ image_aspects }}">
         <input type="hidden" class="min_dimensions" value="{{ image_min_dimensions }}">
         <input type="hidden" class="max_dimensions" value="{{ image_max_dimensions }}">
@@ -91,6 +91,7 @@
 
           <span class="item-controls">
             <input type="checkbox" class="check-box" value="">
+            <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
             <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
           </span>
         </div>
