stdomage client widget

--- a/src/libs/autocomplete/templates/autocomplete/autocomplete_textbox.html
+++ b/src/libs/autocomplete/templates/autocomplete/autocomplete_textbox.html
@@ -1,8 +1,5 @@
 <div class="autocomplete_textbox">
-  <input type="text" {{ attrs }}
-         value="{{ value }}"
-         name="{{ name }}"
-         data-tags="{{ choices|join:"::" }}"/>
+  <input type="text" {{ attrs }} value="{{ value }}" data-tags="{{ choices|join:"::" }}"/>
 
   <div class="choices"></div>
 </div>
