--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -30,8 +30,7 @@
       data-modelname="{{ model_name }}">
 
     {% block content %}
-      <input type="hidden" class="gallery_id" {{ attrs }} name="{{ name }}"
-             value="{{ gallery.pk|default:"" }}"/>
+      <input type="hidden" class="gallery_id" {{ attrs }} value="{{ gallery.pk|default:"" }}"/>
 
       {% if gallery_model.IMAGE_MODEL %}
         <input type="hidden" class="aspects" value="{{ image_aspects }}">
