--- a/src/libs/stdimage/templates/stdimage/client_widget.html
+++ b/src/libs/stdimage/templates/stdimage/client_widget.html
@@ -3,20 +3,18 @@
 
 <div class="stdimage">
   <div class="item-preview"
-       data-size="{{ admin_variation.size|join:'x' }}"
-       data-crop="{{ admin_variation.crop|yesno:"1,0,1" }}"
-       data-stretch="{{ admin_variation.stretch|yesno:"1,0,0" }}"
-       data-max_width="{{ admin_variation.max_width }}"
-       data-max_height="{{ admin_variation.max_height }}"
-       data-offset="{{ admin_variation.offset|default:''|join:'x' }}"
-       data-center="{{ admin_variation.center|default:''|join:'x' }}"
-       data-background="{{ admin_variation.background|join:',' }}"
+       data-size="{{ preview_variation.size|join:'x' }}"
+       data-crop="{{ preview_variation.crop|yesno:"1,0,1" }}"
+       data-stretch="{{ preview_variation.stretch|yesno:"1,0,0" }}"
+       data-max_width="{{ preview_variation.max_width }}"
+       data-max_height="{{ preview_variation.max_height }}"
+       data-offset="{{ preview_variation.offset|default:''|join:'x' }}"
+       data-center="{{ preview_variation.center|default:''|join:'x' }}"
+       data-background="{{ preview_variation.background|join:',' }}"
        data-source="{{ value.url_nocache }}">
 
-    {% if value %}
-      {% with variation_field=value|get_variation:admin_variation.name %}
-        <img src="{{ variation_field.url_nocache }}">
-      {% endwith %}
+    {% if preview %}
+      <img src="{{ preview.url_nocache }}">
     {% endif %}
   </div>
 
