--- a/src/apps/main/templates/main/forms.html
+++ b/src/apps/main/templates/main/forms.html
@@ -6,6 +6,8 @@
 {% block static_head %}
   {{ block.super }}
   {% stylesheet 'main_forms' %}
+
+  {{ form.media }}
 {% endblock static_head %}
 
 {% block static_js %}
