--- a/src/libs/stdimage/templates/stdimage/client_widget.html
+++ b/src/libs/stdimage/templates/stdimage/client_widget.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="stdimage"
+<div class="stdimage {% if not preview %}empty{% endif %}"
      data-size="{{ preview_variation.size|join:'x' }}"
      data-crop="{{ preview_variation.crop|yesno:"1,0,1" }}"
      data-stretch="{{ preview_variation.stretch|yesno:"1,0,0" }}"
@@ -14,11 +14,13 @@
      data-min_dimensions="{{ min_dimensions|join:'x' }}"
      data-max_dimensions="{{ max_dimensions|join:'x' }}">
 
-  <div class="item-preview">
+  <div class="previews">
     {% if preview %}
-      <img src="{{ preview.url_nocache }}">
+      <img src="{{ preview.url_nocache }}" class="old-preview">
     {% endif %}
-  </div>
 
-  <input type="file" {{ attrs }}>
+    <img src="{{ preview.url_nocache }}" class="new-preview" style="display: none">
+
+    <input type="file" {{ attrs }}>
+  </div>
 </div>
