--- a/src/libs/stdimage/static/stdimage/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/css/stdimage.css
@@ -13,7 +13,7 @@
 .stdimage.empty .previews {
     width: 170px;
     height: 80px;
-    background: url(../img/camera.svg) no-repeat center;
+    background: url(../img/camera.svg) no-repeat center #AAA;
     background-size: 50% 75%;
     border-radius: 4px;
 }
