--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -132,3 +132,21 @@
   padding: 40px 0;
   background: black;
 }
+
+
+#tabs {
+  @include font-size(12px);
+
+  .tab {
+    display: none;
+    min-height: 100px;
+
+    &.visible {
+      display: block;
+    }
+
+    h4 {
+      font-weight: bold;
+    }
+  }
+}
