columns mixin + fixes

--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -4,6 +4,7 @@
 @import 'mixins/box_shadow';
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
+@import 'mixins/columns';
 @import 'mixins/flex';
 @import 'mixins/font_size';
 @import 'mixins/grayscale';
