--- a/src/libs/autocomplete/static/autocomplete/css/select2.css
+++ b/src/libs/autocomplete/static/autocomplete/css/select2.css
@@ -3,6 +3,7 @@ Version: 3.5.4 Timestamp: Sun Aug 30 13:30:32 EDT 2015
 */
 .select2-container {
     margin: 0;
+    min-width: 220px;
     position: relative;
     display: inline-block;
     vertical-align: middle;
