--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -4,7 +4,7 @@ form {
   @include border-box;
 }
 
-input:not([type="radio"]):not([type="checkbox"]):not([type="file"]), select, textarea {
+input:not([type="radio"]):not([type="checkbox"]):not([type="file"]), select, textarea, button {
   width: 200px;
   padding: 5px 6px;
   border: 1px solid #808080;
@@ -26,9 +26,14 @@ fieldset {
   }
 
   &.errors {
-    input:not([type="radio"]):not([type="checkbox"]), select, textarea {
+    input:not([type="radio"]):not([type="checkbox"]):not([type="file"]), select, textarea {
       border: 2px solid red;
       padding: 3px 4px;
     }
+  }
+
+  .error {
+    margin-left: 10px;
+    color: #FF0000;
   }
 }
