mobile-menu-button

--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -7,7 +7,7 @@
 
   <div class="cell gc-wide-6 gc-6 gc-tablet-2 gc-mobile-2">
     <div class="menu-wrapper">
-      <span id="mobile-menu"></span>
+      <span id="mobile-menu-button"></span>
 
       <div id="main-menu">
         {% main_menu %}
