--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -45,7 +45,7 @@
 // Кнопка меню для мобильной версии
 $menu_line_height: 3px;
 $menu_line_gap: 5px;
-#mobile-menu {
+#mobile-menu-button {
   position: relative;
   float: right;
   width: 28px;
