--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -49,7 +49,7 @@
 
   <div id="sticky_example">
     <div class="grid">
-      <div class="gc-full gc-alone">
+      <div class="gc-full gc-alone" style="position: relative; z-index: 1;">
         <div class="yellow"></div>
       </div>
     </div>
