--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -13,6 +13,15 @@ input, select, textarea, button {
   @include border_radius(4px);
 }
 
+input[type="number"] {
+  -moz-appearance: textfield;
+
+  &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
 fieldset {
   margin-bottom: 10px;
   &:nth-last-of-type(1) {
