--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -49,8 +49,17 @@
 
   <div id="sticky_example">
     <div class="grid">
-      <div class="gc-full gc-alone" style="position: relative; z-index: 1;">
+      <div class="gc-full gc-alone">
         <div class="yellow"></div>
+      </div>
+    </div>
+  </div>
+
+  <div id="layer_example">
+    <div class="grid">
+      <div class="gc-full gc-alone">
+        <div class="yellow"></div>
+        <div class="green"></div>
       </div>
     </div>
   </div>
