--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -3,11 +3,6 @@
 $item_size: 20px;
 $item_gap: 10px;
 $dot_size: 12px;
-$dot_color: rgba(#3B91CA, 0.3);
-$dot_hover_scale: 1.3;
-$dot_hover_color: rgba(#3B91CA, 0.5);
-$dot_active_scale: $dot_hover_scale;
-$dot_active_color: rgba(#3B91CA, 1);
 
 // Navigation
 .slider-navigation {
@@ -37,7 +32,7 @@ $dot_active_color: rgba(#3B91CA, 1);
       width: $dot_size;
       height: $dot_size;
       vertical-align: middle;
-      background-color: $dot_color;
+      background-color: rgba(#3B91CA, 0.3);
       @include border_radius(50%);
       @include transition-property(-webkit-transform, transform, color);
       @include transition-duration(0.3s);
@@ -45,15 +40,15 @@ $dot_active_color: rgba(#3B91CA, 1);
 
     &:hover {
       &:before {
-        background-color: $dot_hover_color;
-        @include transform(scale($dot_hover_scale));
+        background-color: rgba(#3B91CA, 0.5);
+        @include transform(scale(1.3));
       }
     }
 
     &.active {
       &:before {
-        background-color: $dot_active_color;
-        @include transform(scale($dot_active_scale));
+        background-color: rgba(#3B91CA, 1);
+        @include transform(scale(1.3));
       }
     }
   }
