--- a/src/apps_common/header/static/header/scss/header.scss
+++ b/src/apps_common/header/static/header/scss/header.scss
@@ -1,8 +1,10 @@
 @import 'mixins';
 
 header {
+  position: relative;
   padding: 45px 0;
   width: 100%;
+  z-index: 2;
   background: rgba(green, 0.8);
   @include media_interval(0, $media768) {
     padding: 25px 0;
