--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -108,29 +108,29 @@
   </div>
 
   <div id="tabs">
-    <div class="tab tab-one visible">
+    <div class="tab one visible">
       <h4>Tab №1.1</h4>
-      <p><a href="#" data-tab="tab-two">tab 2</a></p>
-      <p><a href="#" data-tab="tab-three">tab 3</a></p>
+      <p><a href="#" data-tab="two">tab 2</a></p>
+      <p><a href="#" data-tab="three">tab 3</a></p>
 
       <p><a href="#" data-tab-back>back</a></p>
     </div>
 
-    <div class="tab tab-two">
+    <div class="tab two">
       <h4>Tab №2.1</h4>
-      <p><a href="#" data-tab="tab-two-two">tab 2.2</a></p>
+      <p><a href="#" data-tab="two-two">tab 2.2</a></p>
 
       <p><a href="#" data-tab-back>back</a></p>
     </div>
 
-    <div class="tab tab-two-two">
+    <div class="tab two-two">
       <h4>Tab №2.2</h4>
-      <p><a href="#" data-tab="tab-two-two-three">tab 3.1 throw 2.2</a></p>
+      <p><a href="#" data-tab="two-two-three">tab 3.1 throw 2.2</a></p>
 
       <p><a href="#" data-tab-back>back</a></p>
     </div>
 
-    <div class="tab tab-three tab-two-two-three">
+    <div class="tab tab-three two-two-three">
       <h4>Tab №3.1</h4>
 
       <p><a href="#" data-tab-back>back</a></p>
