--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -12,6 +12,8 @@
       <div id="main-menu">
         {% main_menu %}
       </div>
+
+      <div id="mobile-menu"></div>
     </div>
   </div>
 </div>
